<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="600dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/제목"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TextSizeCheck" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="273dp"
                android:layout_height="50dp"
                android:background="@drawable/search_view_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:queryHint="검색어를 입력하세요."
                app:defaultQueryHint="검색어를 입력하세요."
                app:iconifiedByDefault="false"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="60dp"
            android:gravity="center" >

            <Button
                android:id="@+id/freeBoardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:outlineProvider="none"
                android:stateListAnimator="@null"
                android:text="자유게시판"
                android:textColor="#000000"
                android:textSize="11sp"
                tools:ignore="HardcodedText,TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />

            <Button
                android:id="@+id/questionBoardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:outlineProvider="none"
                android:stateListAnimator="@null"
                android:text="@string/질문게시판"
                android:textColor="#FD7777"
                android:textSize="11sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />

            <Button
                android:id="@+id/suggestionBulletinBoardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:outlineProvider="none"
                android:stateListAnimator="@null"
                android:text="@string/건의게시판"
                android:textColor="#000000"
                android:textSize="11sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />

            <Button
                android:id="@+id/humorBulletinBoardButton"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:outlineProvider="none"
                android:stateListAnimator="@null"
                android:text="@string/유머"
                android:textColor="#000000"
                android:textSize="11sp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/boardWriteButton"
                android:layout_width="65dp"
                android:layout_height="48dp"
                android:text="@string/글쓰기"
                android:textColor="#000000"
                android:textSize="10sp"
                tools:ignore="SmallSp,TextSizeCheck,VisualLintBounds" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/boardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D9D9D9"
                android:text="@string/게시물_목록"
                android:textAlignment="center"
                android:textColor="#0070C0"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/boardRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="386dp"
                tools:listitem="@layout/list_item_post" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>