<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/titleTextView"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/제목"
                    android:importantForAutofill="no"
                    android:minHeight="48dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/작성자"
                    android:importantForAutofill="no"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/postDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/작성일"
                    android:importantForAutofill="no"
                    android:minHeight="48dp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/postImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="0dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/contentTextView"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:gravity="top|start"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                tools:ignore="InefficientWeight,SpeakableTextPresentCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>